# holdem-with-prompt

./: Cargo.toml
.cursor/prd/components/: component.adoc  frame-blank.adoc  frame-partition.adoc  item-list.adoc
.cursor/prd/libs/: effector-eq.adoc  effector-processing.adoc  exporting.adoc  importing.adoc  math.adoc
.cursor/prd/logic/: judgement.adoc
crates/client/: Cargo.toml
crates/client/src/: app.rs  main.rs  network.rs
crates/client/src/ui/: components.rs  game.rs  lobby.rs  mod.rs
crates/server/: Cargo.toml
crates/server/src/: game.rs  main.rs  network.rs
crates/shared/: Cargo.toml
crates/shared/src/: card.rs  game.rs  hand.rs  lib.rs  protocol.rs
docs/: DRAFT.adoc
