[package]
name = "holdem-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
tokio = { workspace = true }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors"] }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { version = "1", features = ["v4"] }

# 공유 crate 사용
holdem-shared = { path = "../shared" }